# ics_filter

./: .gitignore  Dockerfile  Makefile  README.md  config.json  index.js  index.py  package-lock.json  package.json  result.json
python_implementation/: alwaysrun_zoomout.sh  config.toml.example  index.py  pyproject.toml
