[tool.poetry]
name = "zoomout"
version = "0.1.0"
description = ""
authors = ["Charlie <515171-Cxarli@users.noreply.gitlab.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
icalendar = "^4.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
